Fixed header on mobile

--- a/_sass/_components.page-body.scss
+++ b/_sass/_components.page-body.scss
@@ -3,7 +3,9 @@
 \*------------------------------------*/
 
 .page-body {
-
+  @include media-query(palm) {
+    padding-top: 77px;
+  }
 }
 
   .page-body__title {
