--- a/_sass/_components.site-nav.scss
+++ b/_sass/_components.site-nav.scss
@@ -20,8 +20,7 @@
   .site-nav__btn {
     cursor: pointer;
     position: absolute;
-    top: $spacing-unit--medium;
-    right: $spacing-unit;
+    right: $spacing-unit--small;
     z-index: 2000;
   }
 
