--- a/_sass/_settings.colors.scss
+++ b/_sass/_settings.colors.scss
@@ -107,3 +107,9 @@ $color-region-title-border:     $color-black;
 $color-tag:               $color-white;
 $color-tag-bg:            $color-brand;
 $color-tag-bg-hover:      darken($color-tag-bg, 5%);
+
+
+
+
+// Page head
+$color-bg-page-head:      $color-white;
